<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zalguur</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="hint_number">type phone number to call</string>
    <string name="callToMn">Call to MN</string>
    <string name="callToDe">Call to DE</string>
    <string name="view_gateway">"Gateway number"</string>
    <string name="view_pin">"PIN number"</string>
    <string name="hint_gateway">"type gateway number"</string>
    <string name="hint_pin">"type PIN number"</string>
    <string name="save">"Save"</string>
    <string name="clear">"Clear"</string>
    <string name="cancel">"Cancel"</string>

</resources>
