<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zalguur.MainActivity" >

    <!-- Phone number -->
    <EditText
        android:id="@+id/number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/hint_number"
        android:ems="10"
        android:inputType="phone" />
    
    <!-- Call to MN button -->
    <Button
        android:id="@+id/callMn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number"
        android:layout_marginTop="20dp"
        android:text="@string/callToMn" />

    <!-- Call to DE button -->
	<Button
	    android:id="@+id/callDe"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/callMn"
	    android:layout_alignBottom="@+id/callMn"
	    android:layout_marginLeft="16dp"
	    android:layout_alignParentRight="true"
	    android:text="@string/callToDe" />

</RelativeLayout>
